samples/task/valid/R22.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><substeps><substep><cmd>This is one level of substep.</cmd></substep></substeps></step></steps>
  </taskbody>
</task>