samples/task/invalid/R28.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><substeps><substep><cmd/><substeps><substep><cmd/></substep></substeps></substep></substeps></step></steps>
  </taskbody>
</task>